@startuml

title __LANGUAGE's Class Diagram__\n

  namespace model.data {
    namespace pages {
      namespace language {
        class model.data.pages.language.Form {
            - description : String
            - name : String
            + Form()
            + Form()
            + getDescription()
            + getTitle()
        }
      }
    }
  }
  

  namespace model.data {
    namespace pages {
      namespace language {
        class model.data.pages.language.Lexeme {
            - description : String
            - name : String
            + Lexeme()
            + Lexeme()
            + getDescription()
            + getTitle()
        }
      }
    }
  }
  

  namespace model.data {
    namespace pages {
      namespace language {
        class model.data.pages.language.Sense {
            - description : String
            - name : String
            + Sense()
            + Sense()
            + getDescription()
            + getTitle()
        }
      }
    }
  }
  

  model.data.pages.language.Form -up-|> model.data.Datum
  model.data.pages.language.Lexeme -up-|> model.data.Datum
  model.data.pages.language.Sense -up-|> model.data.Datum


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
